Backup and Migrate 5.0.x-dev, xxxx-xx-xx
----------------------------------------
#3158790 by devad, raman.b, karolus, robcarr, DamienMcKenna, endless_wander,
  Bagz, jhnnsbstnbch, abdul_azeez_drusys, celia_ccs: Unable to add schedules and
  profiles.
#3169301 by devad, snehalgaikwad, DamienMcKenna: Unable to add backup source.


Backup and Migrate 5.0.0-rc1, 2020-06-12
----------------------------------------
#3051092 by DamienMcKenna, vuil, rpayanm, waverate: Drupal 9 compatibility.
#3065017 by DamienMcKenna, dercheffe, Promo-IL: Restore emoji unicode characters
  not possible.
#3143651 by DamienMcKenna: Ignore cache_page by default.
#3143652 by DamienMcKenna: Coding standards improvements.
#3143652 by DamienMcKenna: Rename class methods that start with an underscore.
#3124193 by vsujeetkumar, DamienMcKenna, Neslee Canil Pinto: t() calls should be
  avoided in classes.
#3159638 by DamienMcKenna, endless_wander, snehalgaikwad, kvantstudio,
  naresh_bavaskar: Error when saving destination.


Backup and Migrate 8.x-4.x-dev, xxxx-xx-xx
------------------------------------------
#3121797 by paulocs, thalles, RenatoG, Neslee Canil Pinto: Update support.source
  link in composer.json.
#3104422 by peterkokot, DamienMcKenna: PHP 7.4 deprecated reverse order of glue
  and pieces in implode.
#3121309 by DamienMcKenna, Neslee Canil Pinto: Compatibility with Drupal 9.
#3128371 by solideogloria: info.yml "dependencies" spelled wrong.
#3130772 by DamienMcKenna: Remove dependencies from info.yml file.
#3131711 by douggreen: 'label' key defined twice for backup_migrate.profile.*
  config_entity schema in backup_migrate.schema.yml.


Backup and Migrate 8.x-4.1, 2019-12-20
--------------------------------------
#2975065 by Dinu Rodnitchi, Alex Andrascu: Add encryption support.
#3041404 by DamienMcKenna: Add CHANGELOG.txt.
#2947276 by liliancatanoi90, rajeshwari10, minakshiPh, Elaman, emartoni,
  DamienMcKenna, alonaoneill: Missing module help.